# mcp_playground

./: .gitignore  README.md  pyproject.toml
llm_evals/: README.md  __init__.py  main.py  utils.py
llm_evals/eval/: __init__.py  eval.py
llm_testing_ground/: README.md  main.py  utils.py
llm_testing_ground/eval/: claude_langsmith.py
src/: __init__.py
src/agents/: audioprocess.py  radio_stations.yaml  summarizer.py
voice_transcription_deepgram/src/: main.py
voice_transcription_deepgram/src/agents/: __init__.py
