[project]
name = "mcp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
    "langchain-mistralai>=1.1.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain[anthropic,openai]>=1.2.15",
    "langsmith[claude-agent-sdk]>=0.7.32",
    "loguru>=0.7.3",
    "mistralai>=2.2.0",
    "pyradio>=0.5.2",
    "python-backoff>=2.3.1",
    "python-dotenv>=1.2.2",
    "python-ffmpeg>=2.0.12",
    "pyyaml>=6.0.3",
    "strands-agents-tools>=0.3.0",
    "strands-agents[anthropic]>=1.34.1",
    "strands-deepgram>=0.1.0",
    "tqdm>=4.67.3",
]
